--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "DEBUG=app: nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint"
   },
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "debug": "^4.3.7",
     "express": "^4.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
