--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "debug": "^4.3.7",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "joi": "^17.13.3",
     "mongoose": "^8.8.1"
   },
