Add config package. Move db setup to module

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "DEBUG=app: nodemon index.ts",
+    "start": "NODE_ENV=development DEBUG=app: nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint"
   },
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "config": "^3.3.12",
     "debug": "^4.3.7",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/config": "^3.3.5",
     "@types/debug": "^4.1.12",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
