--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "NODE_ENV=development DEBUG=app: nodemon index.ts",
     "test": "jest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "ts-node scripts/seed.ts"
   },
   "author": "",
   "license": "ISC",
