--- a/package.json
+++ b/package.json
@@ -1,43 +1,19 @@
 {
   "name": "patrick-coding-exercise",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development DEBUG=app: nodemon index.ts",
-    "test": "jest",
-    "lint": "eslint",
-    "seed": "ts-node scripts/seed.ts"
+    "frontend": "cd frontend && npm run dev",
+    "backend": "cd backend && npm run start",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "build": "cd frontend && npm run build",
+    "install-all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
-  "author": "",
+  "keywords": [],
+  "author": "", 
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "config": "^3.3.12",
-    "debug": "^4.3.7",
-    "express": "^4.21.1",
-    "express-async-errors": "^3.1.1",
-    "joi": "^17.13.3",
-    "mongoose": "^8.8.1"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@types/config": "^3.3.5",
-    "@types/debug": "^4.1.12",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.14.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.12.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.14.0"
+    "concurrently": "^9.1.0"
   }
 }
