Add missing seed command in root package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "seed": "cd backend && npm run seed",
     "frontend": "cd frontend && npm run dev",
     "backend": "cd backend && npm run start",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
