--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "config": "^3.3.12",
+    "cors": "^2.8.5",
     "debug": "^4.3.7",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/config": "^3.3.5",
+    "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
