--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
